# Data_Management_App

./: .gitignore  BackupManager.cpp  BackupManager.h  BackupWindow.cpp  BackupWindow.h  CMakeLists.txt  CMakeLists_orgin.txt  PackageUtils.cpp  PackageUtils.h  README.md  RestoreManager.cpp  RestoreManager.h  RestoreWindow.cpp  RestoreWindow.h  TarUtils.h  ZipUtils.cpp  ZipUtils.h  backupwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.pro  project_SDE  project_SDE.pro  restorewindow.ui  test.cpp  tests.pro
.cache/clangd/index/: BackupManager.cpp.F11816E7B0A17F2C.idx  BackupManager.h.A44F647F4844AE9F.idx  BackupWindow.h.3F7A1FC276C35032.idx  PackageUtils.h.AF7C52C3878AE6EF.idx  RestoreManager.h.66B4C27CBA24E503.idx  RestoreWindow.h.F93A86E18C5BA20A.idx  main.cpp.92F82ED60F0A0669.idx  mainwindow.h.19D6A0336DEE3691.idx
